rewrite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 34.91.171.133.nip.io
      http:
        paths:
          - path: /alerts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: alert-service
                port:
                  number: 80
          - path: /customers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 80
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /optimizations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-opt-service
                port:
                  number: 80
          - path: /catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
          - path: /inventories(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-mgmt-service
                port:
                  number: 80
